<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgHeaderLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/header1_login" />

            <TextView
                android:id="@+id/txtViewSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:text="@string/title_sign_up"
                android:textColor="@color/white"
                android:textSize="27sp" />

        </FrameLayout>

        <TextView
            android:id="@+id/txtViewNewAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:text="@string/txtViewNewAccount"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:src="@drawable/profile_img"
            android:transitionName="sharedElement"
            app:civ_border_color="#ffffff"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/txtViewNewAccount"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

        <ProgressBar
            android:id="@+id/progressBarImg"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/txtUploadProfilePhoto"
            app:layout_constraintEnd_toEndOf="@+id/profile_image"
            app:layout_constraintStart_toStartOf="@+id/profile_image"
            app:layout_constraintTop_toTopOf="@+id/profile_image" />

        <TextView
            android:id="@+id/txtUploadProfilePhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/txtUploadProfilePhoto"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/profile_image"
            app:layout_constraintStart_toStartOf="@+id/profile_image"
            app:layout_constraintTop_toBottomOf="@+id/profile_image" />

        <EditText
            android:id="@+id/editTxtEmailSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:hint="@string/editTxtEmail"
            android:importantForAutofill="auto"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtUploadProfilePhoto" />

        <EditText
            android:id="@+id/editTxtUserName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/editTxtUserName"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/editTxtEmailSignUp"
            app:layout_constraintStart_toStartOf="@+id/editTxtEmailSignUp"
            app:layout_constraintTop_toBottomOf="@+id/editTxtEmailSignUp" />

        <EditText
            android:id="@+id/editTxtPasswordSignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/editTxtPassword"
            android:textAlignment="viewStart"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/editTxtUserName"
            app:layout_constraintStart_toStartOf="@+id/editTxtUserName"
            app:layout_constraintTop_toBottomOf="@+id/editTxtUserName" />

        <EditText
            android:id="@+id/editTxtRePasswordSignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/editTxtRePassword"
            android:textAlignment="viewStart"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/editTxtPasswordSignUp"
            app:layout_constraintStart_toStartOf="@+id/editTxtPasswordSignUp"
            app:layout_constraintTop_toBottomOf="@+id/editTxtPasswordSignUp" />

        <EditText
            android:id="@+id/editTxtPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/editTxtPhone"
            android:textAlignment="viewStart"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="@+id/editTxtRePasswordSignUp"
            app:layout_constraintStart_toStartOf="@+id/editTxtRePasswordSignUp"
            app:layout_constraintTop_toBottomOf="@+id/editTxtRePasswordSignUp" />

        <Button
            android:id="@+id/btnSignUp"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/btn_style"
            android:text="@string/title_sign_up"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/editTxtPhone"
            app:layout_constraintStart_toStartOf="@+id/editTxtPhone"
            app:layout_constraintTop_toBottomOf="@+id/editTxtPhone" />

        <TextView
            android:id="@+id/txtViewAlreadyRegistered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/txtViewAlreadyRegistered"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btnSignUp"
            app:layout_constraintStart_toStartOf="@+id/btnSignUp"
            app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>